Add python-cli